--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
         "@tailwindcss/vite": "^4.1.11",
         "@tanstack/react-query": "^5.84.2",
         "classnames": "^2.5.1",
+        "masonic": "^4.1.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
-        "react-responsive-masonry": "^2.7.1",
         "tailwindcss": "^4.1.11"
     },
     "devDependencies": {
