--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@tanstack/react-query": "^5.84.2",
         "classnames": "^2.5.1",
         "masonic": "^4.1.0",
+        "rc-slider": "^11.1.8",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "tailwindcss": "^4.1.11"
