--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@tailwindcss/vite": "^4.1.11",
         "@tanstack/react-query": "^5.84.2",
         "classnames": "^2.5.1",
+        "dompurify": "^3.2.6",
         "masonic": "^4.1.0",
         "rc-slider": "^11.1.8",
         "react": "^19.1.1",
