--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
         "@tanstack/react-query": "^5.84.2",
+        "@tanstack/react-query-devtools": "^5.84.2",
         "classnames": "^2.5.1",
         "dompurify": "^3.2.6",
         "masonic": "^4.1.0",
@@ -48,6 +49,7 @@
         "typescript": "~5.9.2",
         "typescript-eslint": "^8.39.0",
         "vite": "^7.1.1",
+        "vite-plugin-svgr": "^4.3.0",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.2.4"
     }
