--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,6 +22,7 @@
         "noFallthroughCasesInSwitch": true,
         "noUncheckedSideEffectImports": true,
         "paths": {
+            "Assets/*": ["src/assets/*"],
             "Components/*": ["src/components/*"],
             "Contexts/*": ["src/contexts/*"],
             "Hooks/*": ["src/hooks/*"],
