--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "classnames": "^2.5.1",
         "dompurify": "^3.2.6",
         "masonic": "^4.1.0",
-        "rc-slider": "^11.1.8",
+        "radix-ui": "^1.4.2",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "tailwindcss": "^4.1.11"
@@ -45,7 +45,6 @@
         "jsdom": "^26.1.0",
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.6.14",
-        "prop-types": "^15.8.1",
         "typescript": "~5.9.2",
         "typescript-eslint": "^8.39.0",
         "vite": "^7.1.1",
