--- a/package.json
+++ b/package.json
@@ -14,30 +14,33 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.1.11",
-        "@tanstack/react-query": "^5.84.2",
-        "@tanstack/react-query-devtools": "^5.84.2",
+        "@tailwindcss/vite": "^4.1.12",
+        "@tanstack/react-query": "^5.85.5",
+        "@tanstack/react-query-devtools": "^5.85.5",
+        "@tanstack/react-router": "^1.131.27",
+        "@tanstack/react-router-devtools": "^1.131.27",
         "classnames": "^2.5.1",
         "dompurify": "^3.2.6",
         "jsonrepair": "^3.13.0",
         "masonic": "^4.1.0",
-        "radix-ui": "^1.4.2",
+        "radix-ui": "^1.4.3",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
-        "tailwindcss": "^4.1.11"
+        "tailwindcss": "^4.1.12"
     },
     "devDependencies": {
-        "@eslint/js": "^9.32.0",
+        "@eslint/js": "^9.33.0",
         "@tanstack/eslint-plugin-query": "^5.83.1",
+        "@tanstack/router-plugin": "^1.131.27",
         "@testing-library/react": "^16.3.0",
         "@total-typescript/ts-reset": "^0.6.1",
-        "@types/node": "^24.2.1",
-        "@types/react": "^19.1.9",
+        "@types/node": "^24.3.0",
+        "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
         "@types/react-responsive-masonry": "^2.6.0",
-        "@vitejs/plugin-react": "^5.0.0",
+        "@vitejs/plugin-react": "^5.0.1",
         "@vitest/coverage-v8": "^3.2.4",
-        "eslint": "^9.32.0",
+        "eslint": "^9.33.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-react-hooks": "^5.2.0",
@@ -47,8 +50,8 @@
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "typescript": "~5.9.2",
-        "typescript-eslint": "^8.39.0",
-        "vite": "^7.1.1",
+        "typescript-eslint": "^8.40.0",
+        "vite": "^7.1.3",
         "vite-plugin-svgr": "^4.3.0",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.2.4"
