--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "radix-ui": "^1.4.3",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
+        "react-spinners": "^0.17.0",
         "tailwindcss": "^4.1.12"
     },
     "devDependencies": {
