--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "test-coverage": "vitest run --coverage",
         "lint": "eslint .",
         "typecheck": "tsc",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/logo.svg"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.12",
@@ -40,6 +41,7 @@
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
         "@types/react-responsive-masonry": "^2.6.0",
+        "@vite-pwa/assets-generator": "^1.0.0",
         "@vitejs/plugin-react": "^5.0.1",
         "@vitest/coverage-v8": "^3.2.4",
         "eslint": "^9.33.0",
@@ -54,6 +56,7 @@
         "typescript": "~5.9.2",
         "typescript-eslint": "^8.40.0",
         "vite": "^7.1.3",
+        "vite-plugin-pwa": "^1.0.3",
         "vite-plugin-svgr": "^4.3.0",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.2.4"
