--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@tanstack/react-router-devtools": "^1.131.27",
         "classnames": "^2.5.1",
         "dompurify": "^3.2.6",
+        "jotai": "^2.13.1",
         "jsonrepair": "^3.13.0",
         "masonic": "^4.1.0",
         "posthog-js": "^1.261.0",
