--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@tanstack/react-query-devtools": "^5.85.5",
         "@tanstack/react-router": "^1.131.27",
         "@tanstack/react-router-devtools": "^1.131.27",
+        "@vercel/analytics": "^1.5.0",
         "classnames": "^2.5.1",
         "dompurify": "^3.2.6",
         "jotai": "^2.13.1",
