--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "eslint-plugin-react-refresh": "^0.4.24",
         "globals": "^16.5.0",
         "jsdom": "^27.1.0",
+        "patch-package": "^8.0.1",
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.7.1",
         "typescript": "~5.9.3",
