Remove jotai, add bundle analyzer

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "lint": "eslint .",
         "typecheck": "tsc",
         "preview": "vite preview",
-        "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/logo.svg"
+        "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/logo.svg",
+        "analyze-bundle": "vite build -m analyze-bundle"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.17",
@@ -23,7 +24,6 @@
         "@vercel/analytics": "^1.5.0",
         "classnames": "^2.5.1",
         "dompurify": "^3.3.0",
-        "jotai": "^2.15.1",
         "jsonrepair": "^3.13.1",
         "masonic": "^4.1.0",
         "radix-ui": "^1.4.3",
@@ -59,6 +59,7 @@
         "typescript": "~5.9.3",
         "typescript-eslint": "^8.46.3",
         "vite": "^7.2.2",
+        "vite-bundle-analyzer": "^1.2.3",
         "vite-plugin-pwa": "^1.1.0",
         "vite-plugin-svgr": "^4.5.0",
         "vite-tsconfig-paths": "^5.1.4",
