--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
         "@tanstack/react-query-devtools": "^5.90.2",
         "@tanstack/react-router": "^1.136.5",
         "@tanstack/react-router-devtools": "^1.136.5",
+        "@tanstack/react-virtual": "^3.13.13",
         "@vercel/analytics": "^1.5.0",
         "classnames": "^2.5.1",
         "dompurify": "^3.3.0",
         "jsonrepair": "^3.13.1",
-        "masonic": "^4.1.0",
         "radix-ui": "^1.4.3",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
@@ -42,7 +42,6 @@
         "@types/node": "^24.10.1",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
-        "@types/react-responsive-masonry": "^2.6.0",
         "@vite-pwa/assets-generator": "^1.0.2",
         "@vitejs/plugin-react": "^5.1.1",
         "@vitest/coverage-v8": "^4.0.9",
