--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "react-dom": "^19.2.3",
         "react-json-view-lite": "^2.5.0",
         "react-spinners": "^0.17.0",
-        "tailwindcss": "^4.1.18"
+        "tailwindcss": "^4.1.18",
+        "usehooks-ts": "^3.1.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.2",
