--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
         "@tanstack/react-router": "^1.143.11",
         "@tanstack/react-router-devtools": "^1.143.11",
         "@tanstack/react-virtual": "^3.13.13",
+        "@types/lodash": "^4.17.21",
         "@vercel/analytics": "^1.6.1",
         "classnames": "^2.5.1",
         "dompurify": "^3.3.1",
         "jsonrepair": "^3.13.1",
+        "lodash": "^4.17.21",
         "radix-ui": "^1.4.3",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
